#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

	
Tag: V00-02-20
2014-11-04 Mikhail S. Dubrovin	
- Add geometry support for Epix100 (see PSAS-11)
- SegGeometryCspad2x1V1.py - move common methods to SegGeometry.py, improve self-documentation
- add SegGeometryEpix100V1(.py, .cpp, .h)
- in SegGeometryStore(.py, .h) add SegGeometryEpix100V1
- test/ex_seg_geometry_store.cpp - updated for epix100
	
Tag: V00-02-19
2014-10-17 Mikhail S. Dubrovin	
- GeometryObject - shuffle cspad2x2 pixel only if size==2*185*388 and oname=="CSPAD2X2V1"

Tag: V00-02-18
2014-10-07 Mikhail S. Dubrovin
- GeometryAccess.py - improve documentation for Sphinx 
	
Tag: V00-02-17
2014-10-02 Mikhail S. Dubrovin
- In GeometryObject - add global methods det_shape(arr), data2x2ToTwo2x1(arr2x2), two2x1ToData2x2(arrTwo2x1)
	- now methods return ndarrays through det_shape(arr), which shaffles pixels for cspad2x2
	- add test plot of cspad2x2 in ex_geometry_access.cpp and GeometryAccess.py
- add GlobalMethods.h
	
Tag: V00-02-16
2014-09-30 Mikhail S. Dubrovin
- In SegGeometry.(py,h), SegGeometryCspad2x1V1.(py,h,cpp) add method pixel_mask_array(mbits=0377), update example in *.py 
- In GeometryObject, GeometryAccess.(py,h,cpp) add methods get_pixel_mask(...), set_geo_pars(...), move_geo(...), tilt_geo(...) 
- GeometryAccess.py add method get_psf()
- update examples in test/ex_geometry_access.cpp and GeometryAccess.py
	
Tag: V00-02-15
2014-09-12 Mikhail S. Dubrovin
- in GeometryAccess add methods save_pars_in_file(path), set_print_bits(pbits)
- in GeometryObject add methods str_data()
- update test/examples in GeometryAccess.py and test/ex_geometry_access.cpp
	
Tag: V00-02-14